[package]
name = "hnsw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.8"
nohash-hasher = "0.2.0"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.10.3"
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.15.6", features = ["serde"] }
unroll = "0.1.5"
# openblas-src = { version = "0.10.9", features = ["cblas"]}
# ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }
# ndarray = { version = "0.15.6", features = ["blas", "serde"] }
# blas-src = { version = "0.10", features = ["openblas"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hnsw_benchmarks"
harness = false
