# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "hnsw"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native"]

[lib]
bench = false

[dependencies]
graph = {path = "../graph"}
vectors = {path = "../vectors"}
points = {path = "../points"}
indicatif = "0.17.8"
nohash-hasher = "0.2.0"
rand = "0.8.5"
regex = "1.10.3"
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
num = "0.4.3"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "hnsw_benchmarks"
harness = false
